# bead

./: .gitignore  readme.md
crates/defs/: Cargo.toml
crates/defs/src/: lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: lib.rs
crates/lex/: Cargo.toml
crates/lex/src/: lib.rs
crates/lower/: Cargo.toml
crates/lower-neue/: Cargo.toml
crates/lower-neue/src/: lib.rs  util.rs
crates/lower/src/: defs.rs  expr.rs  lib.rs  ty.rs  util.rs
crates/parse/: Cargo.toml
crates/parse/src/: expr.rs  lib.rs  ty.rs
crates/statics/: Cargo.toml
crates/statics/src/: defs.rs  expr.rs  lib.rs  lower.rs  ty.rs  uniq.rs  util.rs
crates/statics/src/defs/: entity.rs
crates/syntax/: Cargo.toml  build.rs  syntax.ungram
crates/syntax/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: defs.rs  helpers.rs  lib.rs  support.rs
crates/uniq/: Cargo.toml
crates/uniq/src/: lib.rs
