[package]
name = "syntax"
version = "0.1.0"
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
ast-ptr = { git = "https://github.com/azdavis/language-util.git" }
rowan = "0.12"
token = { git = "https://github.com/azdavis/language-util.git" }

[build-dependencies]
syntax-gen = { git = "https://github.com/azdavis/language-util.git" }
